--- a/templates/index.html
+++ b/templates/index.html
@@ -106,12 +106,6 @@
     <section id="portfolio" class="portfolio">
         <div class="container">
             <h2>My Portfolio</h2>
-            <div class="portfolio-filter">
-                <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="web">Web Design</button>
-                <button class="filter-btn" data-filter="app">Web Apps</button>
-                <button class="filter-btn" data-filter="other">Other Projects</button>
-            </div>
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-category="web">
                     <img src="{{ url_for('static', filename='img/bloodpres.jpg') }}" alt="Project 1" class="portfolio-img">
@@ -154,7 +148,7 @@
                     <div class="portfolio-overlay">
                         <h3>Travel website</h3>
                         <p>A full-stack travel agency website.</p>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="http://travel-amber-nine.vercel.app/" class="btn">View Project</a>
                     </div>
                 </div>
                 
@@ -184,7 +178,7 @@
                         </div>
                         <div>
                             <h3>Location</h3>
-                            <p>San Francisco, CA</p>
+                            <p>Melbourne, Australia</p>
                         </div>
                     </div>
                     
@@ -194,7 +188,7 @@
                         </div>
                         <div>
                             <h3>Email</h3>
-                            <p>hello@devportfolio.com</p>
+                            <p>info@katportfolio.com</p>
                         </div>
                     </div>
                     
@@ -204,7 +198,7 @@
                         </div>
                         <div>
                             <h3>Phone</h3>
-                            <p>+1 (555) 123-4567</p>
+                            <p>12445678910</p>
                         </div>
                     </div>
                 </div>
