--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">DevPortfolio</div>
+                <div class="logo">KatPortfolio</div>
                 <ul class="nav-links">
                     <li><a href="{{ url_for('index') }}#home">Home</a></li>
                     <li><a href="{{ url_for('index') }}#about">About</a></li>
@@ -39,11 +39,11 @@
                 <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                 <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
             </div>
-            <p>&copy; 2025 DevPortfolio. All Rights Reserved.</p>
+            <p>&copy; 2025 KatPortfolio. All Rights Reserved.</p>
         </div>
     </footer>
 
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block additional_scripts %}{% endblock %}
 </body>
 </html>
